[package]
name = "BackEnd"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-http = "3.0"
actix-cors = "0.6"
actix-service = "2.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
bcrypt = "0.14"
lettre = { version = "0.11", features = ["smtp-transport"] }
rand = "0.8"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }
env_logger = "0.10"
dotenv = "0.15"
futures-util = "0.3"